fix: logout message position on mobile

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -1645,3 +1645,7 @@ ul.toc-box li:first-child {
 #menu-top-central li a::before {
   top: 1.5em;
 }
+
+.modal-popup {
+  padding-top: 50px;
+}
